vtkPVServerManagerCore: update to the new module system

--- a/ParaViewCore/ServerManager/Core/CMakeLists.txt
+++ b/ParaViewCore/ServerManager/Core/CMakeLists.txt
@@ -28,113 +28,115 @@
 #  SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 #==========================================================================
-set (Module_SRCS
-  vtkLiveInsituLink.cxx
-  vtkSMAMRLevelsDomain.cxx
-  vtkSMArrayListDomain.cxx
-  vtkSMArrayRangeDomain.cxx
-  vtkSMArraySelectionDomain.cxx
-  vtkSMBooleanDomain.cxx
-  vtkSMBoundsDomain.cxx
-  vtkSMCollaborationManager.cxx
-  vtkSMCompositeTreeDomain.cxx
-  vtkSMCompoundProxyDefinitionLoader.cxx
-  vtkSMCompoundSourceProxy.cxx
-  vtkSMCompoundSourceProxyDefinitionBuilder.cxx
-  vtkSMCoreUtilities.cxx
-  vtkSMDataSourceProxy.cxx
-  vtkSMDataTypeDomain.cxx
-  vtkSMDeserializer.cxx
-  vtkSMDeserializerProtobuf.cxx
-  vtkSMDeserializerXMLCache.cxx
-  vtkSMDeserializerXML.cxx
-  vtkSMDimensionsDomain.cxx
-  vtkSMDiscreteDoubleDomain.cxx
-  vtkSMDocumentation.cxx
-  vtkSMDomain.cxx
-  vtkSMDomainIterator.cxx
-  vtkSMDoubleMapProperty.cxx
-  vtkSMDoubleMapPropertyIterator.cxx
-  vtkSMDoubleRangeDomain.cxx
-  vtkSMDoubleVectorProperty.cxx
-  vtkSMEnumerationDomain.cxx
-  vtkSMExtentDomain.cxx
-  vtkSMExportProxyDepot.cxx
-  vtkSMFieldDataDomain.cxx
-  vtkSMFileListDomain.cxx
-  vtkSMInputFileNameDomain.cxx
-  vtkSMFixedTypeDomain.cxx
-  vtkSMGlobalPropertiesLinkUndoElement.cxx
-  vtkSMGlobalPropertiesProxy.cxx
-  vtkSMIdTypeVectorProperty.cxx
-  vtkSMIndexSelectionDomain.cxx
-  vtkSMInputArrayDomain.cxx
-  vtkSMInputProperty.cxx
-  vtkSMInsituStateLoader.cxx
-  vtkSMIntRangeDomain.cxx
-  vtkSMIntVectorProperty.cxx
-  vtkSMLink.cxx
-  vtkSMLiveInsituLinkProxy.cxx
-  vtkSMMapProperty.cxx
-  vtkSMNamedPropertyIterator.cxx
-  vtkSMNumberOfComponentsDomain.cxx
-  vtkSMObject.cxx
-  vtkSMOrderedPropertyIterator.cxx
-  vtkSMOutputPort.cxx
-  vtkSMParaViewPipelineController.cxx
-  vtkSMPWriterProxy.cxx
-  vtkSMPipelineState.cxx
-  vtkSMPluginLoaderProxy.cxx
-  vtkSMPluginManager.cxx
-  vtkSMProperty.cxx
-  vtkSMPropertyGroup.cxx
-  vtkSMPropertyHelper.cxx
-  vtkSMPropertyIterator.cxx
-  vtkSMNullProxy.cxx
-  vtkSMPropertyLink.cxx
-  vtkSMProxy.cxx
-  vtkSMProxyDefinitionManager.cxx
-  vtkSMProxyGroupDomain.cxx
-  vtkSMProxyInitializationHelper.cxx
-  vtkSMProxyIterator.cxx
-  vtkSMProxyLink.cxx
-  vtkSMProxyListDomain.cxx
-  vtkSMProxyLocator.cxx
-  vtkSMProxyManager.cxx
-  vtkSMProxyProperty.cxx
-  vtkSMProxySelectionModel.cxx
-  vtkSMRangeDomainTemplate.txx
-  vtkSMReaderFactory.cxx
-  vtkSMRemoteObject.cxx
-  vtkSMRemoteObjectUpdateUndoElement.cxx
-  vtkSMSILDomain.cxx
-  vtkSMSILModel.cxx
-  vtkSMSelfGeneratingSourceProxy.cxx
-  vtkSMServerStateLocator.cxx
-  vtkSMSession.cxx
-  vtkSMSessionClient.cxx
-  vtkSMSessionObject.cxx
-  vtkSMSessionProxyManager.cxx
-  vtkSMSettings.cxx
-  vtkSMSettingsProxy.cxx
-  vtkSMSourceProxy.cxx
-  vtkSMStateLoader.cxx
-  vtkSMStateLocator.cxx
-  vtkSMStateVersionController.cxx
-  vtkSMStringListDomain.cxx
-  vtkSMStringVectorProperty.cxx
-  vtkSMSubsetInclusionLatticeDomain.cxx
-  vtkSMTimeKeeper.cxx
-  vtkSMTimeKeeperProxy.cxx
-  vtkSMTimeStepIndexDomain.cxx
-  vtkSMTrace.cxx
-  vtkSMUncheckedPropertyHelper.cxx
-  vtkSMUndoElement.cxx
-  vtkSMUndoStack.cxx
-  vtkSMUndoStackBuilder.cxx
-  vtkSMVectorProperty.cxx
-  vtkSMWriterFactory.cxx
-  vtkSMWriterProxy.cxx
-)
+set(classes
+  vtkLiveInsituLink
+  vtkSMAMRLevelsDomain
+  vtkSMArrayListDomain
+  vtkSMArrayRangeDomain
+  vtkSMArraySelectionDomain
+  vtkSMBooleanDomain
+  vtkSMBoundsDomain
+  vtkSMCollaborationManager
+  vtkSMCompositeTreeDomain
+  vtkSMCompoundProxyDefinitionLoader
+  vtkSMCompoundSourceProxy
+  vtkSMCompoundSourceProxyDefinitionBuilder
+  vtkSMCoreUtilities
+  vtkSMDataSourceProxy
+  vtkSMDataTypeDomain
+  vtkSMDeserializer
+  vtkSMDeserializerProtobuf
+  vtkSMDeserializerXML
+  vtkSMDeserializerXMLCache
+  vtkSMDimensionsDomain
+  vtkSMDiscreteDoubleDomain
+  vtkSMDocumentation
+  vtkSMDomain
+  vtkSMDomainIterator
+  vtkSMDoubleMapProperty
+  vtkSMDoubleMapPropertyIterator
+  vtkSMDoubleRangeDomain
+  vtkSMDoubleVectorProperty
+  vtkSMEnumerationDomain
+  vtkSMExtentDomain
+  vtkSMExportProxyDepot
+  vtkSMFieldDataDomain
+  vtkSMFileListDomain
+  vtkSMFixedTypeDomain
+  vtkSMGlobalPropertiesLinkUndoElement
+  vtkSMGlobalPropertiesProxy
+  vtkSMIdTypeVectorProperty
+  vtkSMIndexSelectionDomain
+  vtkSMInputArrayDomain
+  vtkSMInputFileNameDomain
+  vtkSMInputProperty
+  vtkSMInsituStateLoader
+  vtkSMIntRangeDomain
+  vtkSMIntVectorProperty
+  vtkSMLink
+  vtkSMLiveInsituLinkProxy
+  vtkSMMapProperty
+  vtkSMNamedPropertyIterator
+  vtkSMNullProxy
+  vtkSMNumberOfComponentsDomain
+  vtkSMObject
+  vtkSMOrderedPropertyIterator
+  vtkSMOutputPort
+  vtkSMPWriterProxy
+  vtkSMParaViewPipelineController
+  vtkSMPipelineState
+  vtkSMPluginLoaderProxy
+  vtkSMPluginManager
+  vtkSMProperty
+  vtkSMPropertyGroup
+  vtkSMPropertyHelper
+  vtkSMPropertyIterator
+  vtkSMPropertyLink
+  vtkSMProxy
+  vtkSMProxyDefinitionManager
+  vtkSMProxyGroupDomain
+  vtkSMProxyInitializationHelper
+  vtkSMProxyIterator
+  vtkSMProxyLink
+  vtkSMProxyListDomain
+  vtkSMProxyLocator
+  vtkSMProxyManager
+  vtkSMProxyProperty
+  vtkSMProxySelectionModel
+  vtkSMReaderFactory
+  vtkSMRemoteObject
+  vtkSMRemoteObjectUpdateUndoElement
+  vtkSMSILDomain
+  vtkSMSILModel
+  vtkSMSelfGeneratingSourceProxy
+  vtkSMServerStateLocator
+  vtkSMSession
+  vtkSMSessionClient
+  vtkSMSessionObject
+  vtkSMSessionProxyManager
+  vtkSMSettings
+  vtkSMSettingsProxy
+  vtkSMSourceProxy
+  vtkSMStateLoader
+  vtkSMStateLocator
+  vtkSMStateVersionController
+  vtkSMStringListDomain
+  vtkSMStringVectorProperty
+  vtkSMSubsetInclusionLatticeDomain
+  vtkSMTimeKeeper
+  vtkSMTimeKeeperProxy
+  vtkSMTimeStepIndexDomain
+  vtkSMTrace
+  vtkSMUncheckedPropertyHelper
+  vtkSMUndoElement
+  vtkSMUndoStack
+  vtkSMUndoStackBuilder
+  vtkSMVectorProperty
+  vtkSMWriterFactory
+  vtkSMWriterProxy)
+set(template_classes
+  vtkSMRangeDomainTemplate)
 
-vtk_module_library(vtkPVServerManagerCore ${Module_SRCS})
+vtk_module_add_module(ParaView::ServerManagerCore
+  CLASSES ${classes}
+  TEMPLATE_CLASSES ${template_classes})
