--- a/ParaViewCore/ServerManager/Core/Testing/Cxx/CMakeLists.txt
+++ b/ParaViewCore/ServerManager/Core/Testing/Cxx/CMakeLists.txt
@@ -1,4 +1,4 @@
-paraview_add_test_cxx(${vtk-module}CxxTests tests
+vtk_add_test_cxx(vtkPVServerManagerCoreCxxTests tests
   NO_DATA NO_VALID
   TestAdjustRange.cxx
   TestSelfGeneratingSourceProxy.cxx
@@ -10,11 +10,11 @@ paraview_add_test_cxx(${vtk-module}CxxTests tests
 if(NOT PARAVIEW_BUILD_QT_GUI)
   paraview_test_load_data("" can.ex2)
 endif()
-paraview_add_test_cxx(${vtk-module}CxxTests tmp_tests
+vtk_add_test_cxx(vtkPVServerManagerCoreCxxTests tmp_tests
   NO_VALID
   TestParaViewPipelineController.cxx
   )
 list(APPEND tests
   ${tmp_tests})
 
-vtk_test_cxx_executable(${vtk-module}CxxTests tests)
+vtk_test_cxx_executable(vtkPVServerManagerCoreCxxTests tests)
